completion of practice and final adjustments

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroll</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header id="home">
@@ -45,11 +46,11 @@
     </section>
 
     <!-- services -->
-    <scetion class="section" id="services">
+    <section class="section" id="services">
         <div class="title">
             <h2>OUR <span>SERVICES</span></h2>
         </div>
-    </scetion>
+    </section>
 
     <!-- contact -->
     <section class="section" id="tours">
@@ -64,5 +65,7 @@
     </footer>
 
     <a href="#home" class="scroll-link top-link"><i class="fas fa-arrow-up"></i></a>
+
+    <script src="./scroll.js"></script>
 </body>
 </html>
